syntax = "proto3";

option csharp_namespace = "grpcWithAuth";

package graph;

service GraphService {
    // Sends the calendar info from Graph
    rpc GetCalendar (CalendarRequest) returns (CalendarReply);
  }
  
  // The request message
  message CalendarRequest {
    string name = 1;
  }
  
  // The response message containing the calendar information.
  message CalendarReply {
    string subject = 1;
    string bodyPreview = 2;
    string start = 3;
    string end = 4;
  }